samples/_failures_safe/1761647676_6e25f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4fa788e.c: In function ‘handle_reading’:
./samples/SAFE/__tmp_e4fa788e.c:175:28: error: missing terminating " character
  175 |                     printf("Data
      |                            ^~~~~
./samples/SAFE/__tmp_e4fa788e.c:175:21: error: expected expression at end of input
  175 |                     printf("Data
      |                     ^~~~~~
./samples/SAFE/__tmp_e4fa788e.c:175:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4fa788e.c:175:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4fa788e.c:175:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4fa788e.c:175:21: error: expected declaration or statement at end of input
